rest-client/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-client-rest
  labels:
    app: sample-client-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-client-rest
  template:
    metadata:
      labels:
        app: sample-client-rest
        version: v1
    spec:
      containers:
        - name: sample-client-rest
          image: sample-client-app:1.0
          ports:
            - containerPort: 8081
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: sample-client-rest
  labels:
    app: sample-client-rest
    service: sample-client-rest
spec:
  selector:
    app: sample-client-rest
    version: v1
  ports:
    - protocol: TCP
      name: http
      port: 8081
      targetPort: 8081
