rest-client/kubernetes/istio-routes.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: applications-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-client-rest
spec:
  hosts:
    - "*"
  gateways:
    - applications-gateway
  http:
    - match:
        - uri:
            prefix: /sample
      route:
        - destination:
            host: sample-client-rest
            subset: v1
#        port:
#          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-client-rest
spec:
  host: sample-client-rest
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
